testbed/test/cruise/compiler/expected/Static_Method.txt
Static_Method.ump:7: error: incompatible types: String cannot be converted to double
        return s;
               ^
1 error